[#7] Fix